<resources>
    <string name="app_name">MaiaLearning</string>
    <string name="english">English (US)</string>
    <string name="privacy_policy">© 2022 MaiaLearning, Inc. All Rights Reserved \n Privacy Policy • Cookie Preferences</string>
    <string name="login">Log in</string>
    <string name="google">Log In with Google</string>
    <string name="login_withmicro">Log In with Microsoft</string>
    <string name="login_single">Log In with Single Sign On</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="emailaddress">Email address</string>
    <string name="password">Password</string>
    <string name="your_pasword">Your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="err_invalid_email_id">Please enter valid Email Id</string>
    <string name="err_invalid_email_phone">Please enter valid Email Id or Phone Number</string>
    <string name="err_invalid_cellphone">Please enter valid Cellphone</string>
    <string name="err_invalid_password">Please enter valid password</string>
    <string name="enter_email">Enter email</string>
    <string name="request_pass">Request password</string>
    <string name="back">Back</string>
    <string name="pass_sent">Password sent</string>
    <string name="back_to_login">Back to login</string>
    <string name="spanish">Spanish</string>
    <string name="select_lang">Select Language</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="note">Note</string>
    <string name="notes">Counselor Notes</string>
    <string name="notes_tab">Notes</string>
    <string name="dashboard">Dashboard</string>
    <string name="character">Character</string>
    <string name="careers">Careers</string>
    <string name="events">Events</string>
    <string name="universities">Universities</string>
    <string name="universities_search">Search for Any University</string>
    <string name="academics">Academics</string>
    <string name="calender">Calender</string>
    <string name="maiadrive">MaiaDrive</string>
    <string name="portfolio">Portfolio</string>
    <string name="about">About</string>
    <string name="resources">Resources</string>
    <string name="upcoming_visits">Upcoming Visits</string>
    <string name="assignment_">Assignment Test Note\nExample</string>
    <string name="attached_files">Attached files</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="trash">Trash</string>
    <string name="upcomings">Upcoming</string>
    <string name="overdue">Overdue</string>
    <string name="complete">Completed</string>
    <string name="new_message">New Message</string>
    <string name="add_file">+ Add Files</string>
    <string name="send_message">Send Message</string>
    <string name="select_reciepents">Select recepients</string>
    <string name="search">Search</string>
    <string name="select_all">Select All</string>
    <string name="select_reciepents_to">To: Select Recepients</string>
    <string name="cc">CC: Parent</string>
    <string name="considering">Considering</string>
    <string name="applying">Applying</string>
    <string name="application_form">Application Form</string>
    <string name="application_plan">Application Plan</string>
    <string name="milestone">Milestones</string>
    <string name="recommendations">Recommendations</string>
    <string name="decisions">Decisions</string>
    <string name="essays">Essays</string>
    <string name="scholarships">Scholarships</string>
    <string name="messanger">Messenger</string>
    <string name="delete">Delete</string>
    <string name="filters">Filters</string>
    <string name="this_week">This week</string>
    <string name="nxt_week">Next week</string>
    <string name="this_month">This month</string>
    <string name="nxt_month">Next month</string>
    <string name="upcoming">All upcoming</string>
    <string name="type">Type</string>
    <string name="Applications">Applications</string>
    <string name="all_assignments">All Assignments</string>
    <string name="assignment">Assignments</string>
    <string name="fairs"><![CDATA[Fairs & Webinars]]></string>
    <string name="meetings">Meetings</string>
    <string name="survey">Surveys</string>
    <string name="survey_title">Survey</string>
    <string name="select_plan">Select Application Plan</string>
    <string name="early_action">Early Action</string>
    <string name="early_action2">Early Action II</string>
    <string name="decision">Early Decision</string>
    <string name="decision2">Early Decision II</string>
    <string name="priority">Priority Application</string>
    <string name="reg">Regular</string>
    <string name="select_type">Select Application Type</string>
    <string name="other_app">Other Application</string>
    <string name="common">Common App</string>
    <string name="ucas">UCAS</string>
    <string name="resume">Resume</string>
    <string name="deadline">Deadline</string>
    <string name="done">Done</string>
    <string name="universities_5650">5650 Universities</string>
    <string name="united_states">United States</string>
    <string name="three">3</string>
    <string name="university_of_calefornia">University of\nCalifornia, Berkeley</string>
    <string name="first">1st</string>
    <string name="date_by">25 May 2021, 01:20 AM \u0020 \u0020 by: Choudhary, Paul</string>
    <string name="internal">Internal Deadline</string>
    <string name="cr_required">CR: Required</string>
    <string name="cr_required_req">Req.</string>
    <string name="cr_required_opt">Opt.</string>
    <string name="to_applying">To Applying</string>
    <string name="likely">Likely</string>
    <string name="program">Program</string>
    <string name="system_engineering">All Systems Engineering</string>
    <string name="term">Term</string>
    <string name="plan">Plan</string>
    <string name="spring_2022">Spring 2022</string>
    <string name="select_term">Select Term</string>
    <string name="select">Select</string>
    <string name="winter">Winter 2022</string>
    <string name="fall">Fall 2022</string>
    <string name="summer">Summer 2022</string>
    <string name="accepted">Accepted?</string>
    <string name="select_decision">Select Decision</string>
    <string name="select_decision1">Select decision</string>
    <string name="transcript_request">Transcript Request</string>
    <string name="ia_have_applied">I have applied</string>
    <string name="comments">Comments</string>
    <string name="leave_comment">Leave Comment</string>
    <string name="like">Like</string>
    <string name="close">close</string>
    <string name="close_btn">Close</string>
    <string name="overview">Overview</string>
    <string name="college_info">College Information</string>
    <string name="prog_list">Program List</string>
    <string name="community">Community</string>
    <string name="admission">Admission</string>
    <string name="cost_">Cost &amp; Aid</string>
    <string name="var_sport">Varsity Sports</string>
    <string name="campus_service">Campus Services</string>
    <string name="about_uni">The University of California, Berkeley is a public land-grant research university in Berkeley, California. Established in 1868 as the University of California, it is the state\'s first land-grant university and the first campus of the University of California system.</string>
    <string name="web">Web :</string>
    <string name="phone">Phone :</string>
    <string name="add_more">+ Add More</string>
    <string name="add_program">Add Program</string>
    <string name="program_name">Program Name</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="save_action">Save Action</string>
    <string name="add_university">Add University</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="clear">Clear</string>
    <string name="country">Country</string>
    <string name="reigon">Region</string>
    <string-array name="list">
        <item>ApplyTexas</item>
        <item>Coalition Application</item>
        <item>Common Application</item>
        <item>CSU</item>
        <item>UC</item>
        <item>ApplyTexas</item>
    </string-array>
    <string name="cancel_request">Cancel Request</string>
    <string name="cancel_req_msg">Are you sure you\'d like to cancel  request?</string>
    <string name="reload_brag_sheet">Reload Brag Sheet</string>
    <string name="select_file">Please select PDF to upload</string>
    <string name="select_university">Select Universities</string>
    <string name="update_brag">Update Brag Sheet</string>
    <string-array name="UnivFilters">
        <item>Country</item>
        <item>Region</item>
        <item>State</item>
        <item>List</item>
        <item>Type</item>
        <item>Selectivity</item>
        <item>Programs</item>
        <item>Sports</item>
        <item>More</item>
    </string-array>
    <string-array name="consideringFilters">
        
        
        <item>Country</item>
        <item>Applying with</item>
    </string-array>
    <string-array name="EUFilters">
        <item>Country</item>
        <item>University List</item>
        <item>Discipline</item>
        <item>Sub Discipline</item>
    </string-array>
    <string-array name="DEFilters">
        <item>Country</item>
        <item>University List</item>
        <item>Subject Group</item>
        <item>Area of Study</item>
        <item>Field of Study</item>
        <item>Mode of admission</item>
        <item>Mode of study</item>
        <item>Admission Semester</item>
        <item>Instruction Language</item>
    </string-array>
    <string-array name="GBFilters">
        <item>Country</item>
        <item>University List</item>
        <item>2022-2023</item>
        <item>University</item>
        <item>Subject Guide</item>
        <item>Area</item>
        <item>Program</item>
        <item>Colleges</item>
        <item>More</item>
    </string-array>
    <string name="primary_email">Primary Email</string>
    <string name="write">Write</string>
    <string name="reset_Comp">Reset Competetion</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="upload_file">Upload File</string>
    <string name="continue_writing">Continue Writing</string>
    <string name="send_review">Send For Review</string>
    <string name="download_With_comments">Download with comments</string>
    <string name="download_without_comment">Download without comments</string>
    <string name="act">ACT</string>
    <string name="sat">SAT</string>
    <string name="satnact"><![CDATA[SAT & ACT]]></string>
    <string name="not_submitted">Not Submitted</string>
    <string name="complete_btn">Complete</string>
    <string name="sso">Single Sign-on using your school account</string>
    <string name="sso_desc">To sign on using your school\'s sign on system you need to tell us which school you are logging in to. Please provide the CEEB code for your school below.</string>
    <string name="typeceeb">Type CEEB Code</string>
    <string name="typeemail">Type Your Email</string>
</resources>