<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/navigation_view"
        android:title="@string/view" />
<!--    android:icon="@drawable/ic_view"-->
    <item
        android:id="@+id/navigation_write"
        android:title="@string/write" />
<!--    android:icon="@drawable/ic_write"-->
    <item
        android:id="@+id/navigation_file_upload"
        android:title="@string/upload_file"/>
<!--    android:icon="@drawable/ic_upload"-->
    <item
        android:id="@+id/navigation_complete"
        android:title="@string/complete_btn"/>
<!--        android:icon="@drawable/ic_reset"-->

    <item
        android:id="@+id/navigation_reset_complete"
        android:visible="false"
        android:title="@string/reset_Comp"/>
<!--        android:icon="@drawable/ic_reset"-->

</menu>