<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/_40dp"
    android:background="@drawable/white_rounded"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/sso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_black"
        android:lineSpacingExtra="2sp"
        android:paddingHorizontal="@dimen/_15dp"
        android:layout_marginVertical="@dimen/_15dp"

        android:text="@string/sso"
        android:textColor="@color/black"
        android:textSize="16sp"
/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:lineSpacingExtra="2sp"
        android:paddingHorizontal="@dimen/_20dp"
        android:text="@string/sso_desc"
        android:textColor="@color/black"
        android:textSize="14sp"
        />
    <AutoCompleteTextView
        android:id="@+id/ceeb_edt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_15dp"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/stroke"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/bg_white_rect"
        android:hint="@string/typeceeb"
        android:paddingHorizontal="@dimen/_15dp"
 />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="center"

        android:lineSpacingExtra="2sp"
        android:layout_marginTop="@dimen/_15dp"
        android:paddingHorizontal="@dimen/_20dp"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/email_edt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_15dp"
        android:maxLines="1"
        android:textColorHint="@color/stroke"
        android:singleLine="true"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/bg_white_rect"
        android:hint="@string/typeemail"
        android:paddingHorizontal="@dimen/_15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:background="@drawable/bg_white_rect"
            android:backgroundTint="@color/stroke"
            android:text="@string/cancel"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:gravity="center"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_weight="1"
            android:textSize="@dimen/_16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
          />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_15dp"
           android:layout_marginRight="@dimen/_20dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:background="@drawable/bg_white_rect"
            android:backgroundTint="@color/forgot_color"
            android:text="@string/login"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/_16sp"
            android:fontFamily="@font/inter_black"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>