<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/college_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_12dp"
        android:fontFamily="@font/inter_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginVertical="@dimen/_5dp">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textSize="10sp"
            android:checked="false"
            android:id="@+id/sat"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/sat" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textSize="10sp"
            android:checked="false"
            android:fontFamily="@font/inter_semibold"
            android:id="@+id/act"
            android:text="@string/act" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:textSize="10sp"
            android:checked="false"
            android:fontFamily="@font/inter_semibold"
            android:id="@+id/satact"
            android:text="@string/satnact" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:textSize="10sp"
            android:checked="false"
            android:fontFamily="@font/inter_semibold"
            android:id="@+id/not_submit"
            android:text="@string/not_submitted" />
    </LinearLayout>
    <View
        android:background="@color/divider_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>