<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/back_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/_15dp"
        android:drawablePadding="@dimen/_10dp"
        android:text="@string/back"
        android:drawableStart="@drawable/back_arrow"
        android:textSize="@dimen/_16sp" />

    <TextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_15dp"
        android:text="@string/primary_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/clear_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/_15dp"
        android:text="@string/clear"
        android:textSize="@dimen/_16sp" />
    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/filters"
        android:background="@color/divider_color" />

<EditText
    android:layout_width="match_parent"
    android:layout_below="@+id/view3"
    android:padding="@dimen/_5dp"
    android:background="@drawable/white_rect_border"
    android:layout_margin="@dimen/_20dp"
    android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:text="@string/save"
        android:id="@+id/save_btn"
        android:background="@color/blue"
        android:textAllCaps="false" />
</RelativeLayout>