<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="@dimen/_15dp"
        android:text="@string/filters"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawableTint="@color/black_1"
        android:text="@string/back"
        android:paddingVertical="@dimen/_15dp"
        android:drawablePadding="@dimen/_5dp"
        android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_left_24"
        android:textSize="@dimen/_12sp"
        android:layout_alignParentLeft="true" />


    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/filters"

        android:background="@color/divider_color" />

    <RadioGroup
        android:id="@+id/radio_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1">

        <RadioButton
            android:id="@+id/rb_all_assignments"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:button="@drawable/radiobutton"
            android:checked="false"
            android:paddingStart="@dimen/_10dp"
            android:text="@string/all_assignments"
            android:textSize="@dimen/_16sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_below="@+id/applictaion"

            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/rb_app"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:button="@drawable/radiobutton"
            android:checked="true"
            android:paddingStart="@dimen/_10dp"
            android:text="@string/Applications"
            android:textSize="@dimen/_16sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_below="@+id/applictaion"

            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/rb_assignments"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:button="@drawable/radiobutton"
            android:checked="true"
            android:paddingStart="@dimen/_10dp"
            android:text="@string/assignment"
            android:textSize="@dimen/_16sp" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_below="@+id/applictaion"
            android:layout_marginLeft="@dimen/_10dp"

            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/rb_fairs"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:button="@drawable/radiobutton"
            android:checked="true"
            android:paddingStart="@dimen/_10dp"
            android:text="@string/fairs"
            android:textSize="@dimen/_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_below="@+id/applictaion"

            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/rb_meetings"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:button="@drawable/radiobutton"
            android:checked="true"
            android:paddingStart="@dimen/_10dp"

            android:text="@string/meetings"
            android:textSize="@dimen/_16sp" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_below="@+id/radio_application"

            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/rb_surveys"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:button="@drawable/radiobutton"
            android:checked="true"
            android:paddingStart="@dimen/_10dp"

            android:text="@string/survey"
            android:textSize="@dimen/_16sp" />

    </RadioGroup>
    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/radio_application"

        android:background="@color/divider_color" />

</RelativeLayout>
