<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="@dimen/_15dp"


        android:text="@string/filters"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/close"
        android:layout_width="@dimen/_30dp"
        android:layout_alignParentTop="true"
        android:layout_height="@dimen/_30dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/_15dp"
        android:background="@drawable/circle_lay">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/cross" />
    </RelativeLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/filters"

        android:background="@color/divider_color" />
<RadioGroup
    android:layout_width="match_parent"
    android:layout_below="@+id/view1"
    android:id="@+id/radio_group_date"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/rb_this_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:paddingStart="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:button="@drawable/radiobutton"
        android:checked="false"
        android:text="@string/this_week"/>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/applictaion"

        android:background="@color/divider_color" />
    <RadioButton
        android:id="@+id/rb_next_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:paddingStart="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:button="@drawable/radiobutton"
        android:checked="true"
        android:text="@string/nxt_week"/>
    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/applictaion"

        android:background="@color/divider_color" />
    <RadioButton
        android:id="@+id/rb_this_mnth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:button="@drawable/radiobutton"
        android:paddingStart="@dimen/_10dp"
        android:checked="true"
        android:layout_marginLeft="@dimen/_10dp"
        android:text="@string/this_month"/>
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_below="@+id/applictaion"

        android:background="@color/divider_color" />
    <RadioButton
        android:id="@+id/rb_next_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:button="@drawable/radiobutton"
        android:paddingStart="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:checked="true"
        android:text="@string/nxt_month"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/applictaion"

        android:background="@color/divider_color" />
    <RadioButton
        android:id="@+id/rb_upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:button="@drawable/radiobutton"
        android:paddingStart="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_10dp"

        android:checked="true"
        android:text="@string/upcoming"/>

</RadioGroup>
    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/radio_group_date"

        android:background="@color/divider_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view6"
        android:paddingHorizontal="@dimen/_10dp"
        android:paddingVertical="@dimen/_15dp"
        android:text="@string/type"
        android:textColor="@color/grey_2"
        android:textSize="@dimen/_16sp" />

    <TextView
        android:id="@+id/applictaion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view6"
        android:layout_alignParentRight="true"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:drawablePadding="@dimen/_2dp"
        android:drawableTint="@color/grey_2"
        android:paddingHorizontal="@dimen/_10dp"
        android:paddingVertical="@dimen/_15dp"
        android:text="@string/Applications"
        android:textColor="@color/grey_3"
        android:textSize="@dimen/_16sp" />
    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/applictaion"

        android:background="@color/divider_color" />
</RelativeLayout>
